UtahLiveDataTest/src/objects/SiteVisitActivity__c.object
<CustomObject>
    <description>[Business] Site Visit Activity information is stored in this object it provides the detailed information about the Site Visits Activities</description>
    <fields>
        <fullName>ActivityCategory__c</fullName>
        <label>Activity Category</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <label>Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDiscussion__c</fullName>
        <label>Activity Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discussed</fullName>
                </value>
                <value>
                    <fullName>Not Discussed</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideActivityButton__c</fullName>
        <formula>NOT(ISPICKVAL(SiteVisit__r.Status__c, &apos;Reviewed by Grantor&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideActivityButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFindingsButton__c</fullName>
        <formula>IF(($User.IsApplicant__c), NOT(ISPICKVAL(SiteVisit__r.Status__c,&apos;Sent to Subrecipient&apos;)), NOT(ISPICKVAL(SiteVisit__r.Status__c,&apos;Visited&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFindingsButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFlexActions__c</fullName>
        <formula>IF((ISPICKVAL(SiteVisit__r.Status__c,&apos;Initiated By PO&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Grant Monitor Rejected&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Program Manager Rejected&apos;)) &amp;&amp;  ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFlexActions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubResponse__c</fullName>
        <formula>(RecordType.Name = &apos;Internal&apos;) || (ISNULL(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSubResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <label>Site Visit</label>
        <referenceTo>SiteVisit__c</referenceTo>
        <relationshipLabel>Site Visit Activities</relationshipLabel>
        <relationshipName>Site_Visit_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubRecipientResponse__c</fullName>
        <label>SubRecipientResponse</label>
        <type>TextArea</type>
    </fields>
    <label>Site Visit Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SVA-{000}</displayFormat>
        <label>Site Visit Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Activities</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>This is Site Visit Findings for Applicant.</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>This is Site Visit Activity for Grantor</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>